# everdream

./: .gitignore  README.md  pyproject.toml
configs/: attention_moe.yaml  dense_d26.yaml  dense_nanochat_d26.yaml  eval_suite_math.yaml  eval_suite_pretrain.yaml  hybrid.yaml  mix_example.yaml  notebook_dense_custom.yaml  notebook_dense_custom_1b.yaml  notebook_dense_custom_2b_500b.yaml  notebook_dense_custom_3b.yaml  notebook_dense_custom_3b_no_ve.yaml  notebook_dense_custom_500m.yaml  notebook_dense_custom_500m_mistral.yaml  notebook_dense_nanochat_1b.yaml  notebook_dense_nanochat_600m.yaml  notebook_tokenizer_train.yaml  rl_grpo_json.yaml  rl_grpo_math.yaml  rl_prompts_json_example.jsonl  tokenizer_train.yaml
everdream/: __init__.py  checkpoint_manager.py  common.py  flash_attention.py  fp8.py  gpt.py  optim.py  tokenizer.py
everdream/config/: load.py  schema.py
everdream/data/: dataloader.py  sources.py  tokenizer.py
everdream/eval/: __init__.py  metrics.py  runner.py
everdream/evaluation/: __init__.py  adapters.py  config.py  suite.py  tasks.py  verifiers.py
everdream/kernels/: flash_attention.py  fp8.py
everdream/logging/: wandb_logger.py
everdream/models/: attention_moe.py  dense.py  dense_custom.py  dense_nanochat.py  hybrid.py  registry.py
everdream/optim/: __init__.py
everdream/posttraining/: config.py  grpo.py  rewards.py
everdream/pretraining/: trainer.py
everdream/runtime/: distributed.py  notebook.py
scripts/: debug_train_data.py  eval.py  init_notebook.py  prepare_rl_data.py  rl_train.py  train.py  train_tokenizer.py
(+3 files in other folders)
